--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "public": true,
     "builds": [
       {
-        "src": "index.html",
+        "src": "/main.html",
         "use": "@vercel/static"
       }
     ]
