edited vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
     "public": true,
-    "builds": [
+    "routes": [
       {
-        "src": "/main.html",
-        "use": "@vercel/static"
+        "src": "/(.*)",
+        "dest": "/main.html"
       }
     ]
   }
